# Harmony

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MIPS+swi.md  Makefile  README.md  compiler.cpp  cpu.hpp  data.hpp  encode.csv  instructions.hpp  main.cpp  memory.hpp  util.hpp
tests/: assembly.asm  fib  fib.asm  fib2.asm  sort
